--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/samheutmaker/store-front#readme",
   "dependencies": {
     "babel-preset-es2015": "^6.9.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "react-router": "^2.4.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
