--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "dependencies": {
     "babel-preset-es2015": "^6.9.0",
     "express": "^4.13.4",
-    "react-router": "^2.4.1"
+    "react-router": "^2.4.1",
+    "react-router-transition": "0.0.5",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
     "babel": "^6.5.2",
