Run gulp building build

--- a/distelli-manifest.yml
+++ b/distelli-manifest.yml
@@ -6,6 +6,10 @@ samheutmaker/store-front:
   PkgExclude:
     - node_modules/
 
+  PreRelease:
+    - npm install
+    - gulp jshint
+
   PreInstall:
     - echo "Starting PreInstall"
     - sudo apt-get update
