Change gulp task

--- a/distelli-manifest.yml
+++ b/distelli-manifest.yml
@@ -8,7 +8,7 @@ samheutmaker/store-front:
 
   PreRelease:
     - npm install
-    - gulp jshint
+    - gulp build:dev
 
   PreInstall:
     - echo "Starting PreInstall"
