--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "dependencies": {
     "babel-preset-es2015": "^6.9.0",
     "express": "^4.13.4",
+    "node-cron": "^1.1.1",
     "react-router": "^2.4.1",
     "react-router-transition": "0.0.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "superagent": "^2.1.0",
+    "superagent-promise-plugin": "^3.2.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
