--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.11",
     "gulp-concat": "^2.6.0",
+    "gulp-insert": "^0.5.0",
     "gulp-sass": "^2.3.1",
     "jquery": "^3.1.0",
     "react": "^15.1.0",
