Updated distelli manifest to run gulp build:dev twice during pre release

--- a/distelli-manifest.yml
+++ b/distelli-manifest.yml
@@ -9,6 +9,7 @@ samheutmaker/store-front:
   PreRelease:
     - npm install
     - gulp build:dev
+    - gulp build:dev
 
   PreInstall:
     - echo "Starting PreInstall"
