--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/samheutmaker/store-front#readme",
   "dependencies": {
     "babel-preset-es2015": "^6.9.0",
+    "compression": "^1.6.2",
     "express": "^4.13.4",
     "node-cron": "^1.1.1",
     "react-router": "^2.4.1",
